<resources>
    <string name="app_name">Хочу Есть Халяль</string>
    <string name="error_load_data">Ошибка загрузки данных</string>
    <string name="error_unknown">Произошла непредвиденная ошибка</string>

    <string name="title_home">Меню</string>
    <string name="title_contacts">Контакты</string>
    <string name="title_basket">Корзина</string>

    <string name="btn_ok">Ок</string>

    <string name="btn_price_fixed_text">%s ₽</string>
    <string name="btn_price_text">от %s ₽</string>

    <string name="product_info_add_basket">В корзину за %s ₽</string>
    <string name="product_info_succes_add">Добавлено в корзину</string>

    <string name="basket_adapter_item_minus">-</string>
    <string name="basket_adapter_item_plus">+</string>
    <string name="basket_create_order">Оформить за %s ₽</string>
    <string name="basket_error_create_order">Ошибка создания заказа</string>
    <string name="order_created">Заказ успешно создан</string>
    <string name="basket_is_empty">Ой! Корзина пуста. Перейдите в меню для набора заказа</string>
    <string name="open_product_menu">Перейти в меню</string>

    <string name="fragment_contacts_email_hint">Вопросы, отзывы и предложения по улучшению сервиса и качества</string>
    <string name="fragment_contacts_phone_hint">Закажите пиццу по телефону</string>
    <string name="fragment_contacts_show_on_map">Показать на карте</string>

    <string name="channel_name">Обычные</string>
    <string name="channel_description">Уведомления об акциях и купонах</string>
    <string name="default_notification_channel_id">default_notification_channel</string>

    <string name="activity_fcm_message_default_title">Сообщение</string>
    <string name="activity_fcm_message_btn_ok">Прочитано</string>
</resources>
