<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="petrov.ivan.deliverymobile.ui.fragment.delivery.products.ProductsFragment"
            android:label="@string/title_home" />

    <fragment
            android:id="@+id/navigation_contacts"
            android:name="petrov.ivan.deliverymobile.ui.fragment.delivery.ContactsFragment"
            android:label="@string/title_contacts"
            tools:layout="@layout/fragment_contacts" />

    <fragment
            android:id="@+id/navigation_basket"
            android:name="petrov.ivan.deliverymobile.ui.fragment.delivery.basket.BasketFragment"
            android:label="@string/title_basket"
            tools:layout="@layout/fragment_basket" />
    <activity
            android:id="@+id/fcmMessageActivity"
            android:name="petrov.ivan.deliverymobile.ui.fragment.delivery.fcmmessage.FcmMessageActivity"
            android:label="FcmMessageActivity" >
        <argument
                android:name="args"
                app:argType="petrov.ivan.deliverymobile.ui.fragment.delivery.fcmmessage.ArgsFcmMessage" />
    </activity>
</navigation>